--- a/criminalintent/src/main/AndroidManifest.xml
+++ b/criminalintent/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.griminalintent">
 
+    <uses-feature android:name="android.hardware.camera2"
+                  android:required="false"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +15,15 @@
        <!-- <activity android:name=".CrimeActivity"/>-->
         <activity android:name=".CrimePagerActivity"
             android:parentActivityName=".CrimeListActivity"/>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.griminalintent.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files"/>
+        </provider>
         <activity android:name=".CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
